--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,7 @@ dependencies {
 
     // Glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    //circle image view
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
